force-app/main/default/objects/Commerce_Order__c/Commerce_Order__c.object-meta.xml
<CustomObject>
    <description>Operational order record for CommercePulse 360.</description>
    <label>Commerce Order</label>
    <nameField>
        <displayFormat>ORD-{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commerce Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>