force-app/main/default/objects/Commerce_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer_Profile__c</referenceTo>
    <relationshipLabel>Commerce Orders</relationshipLabel>
    <relationshipName>CommerceOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>