force-app/main/default/objects/Commerce_Order__c/fields/External_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Id__c</fullName>
    <label>External Order Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>