force-app/main/default/objects/Commerce_Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <label>Order Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>