force-app/main/default/objects/Commerce_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Preparing</fullName><default>false</default><label>Preparing</label></value>
            <value><fullName>Shipped</fullName><default>false</default><label>Shipped</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
            <value><fullName>Returned</fullName><default>false</default><label>Returned</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>