force-app/main/default/objects/Commerce_Order__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Refunded</fullName><default>false</default><label>Refunded</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>