force-app/main/default/objects/Commerce_Order__c/fields/Shipping_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>Shipping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>Preparing</fullName><default>false</default><label>Preparing</label></value>
            <value><fullName>Shipped</fullName><default>false</default><label>Shipped</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>